--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,38 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-body {
+
+html,body {
+  overflow-x: hidden;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
+  background: #eee;
+  -webkit-touch-callout: none;
+  /* iOS Safari */
+  -webkit-user-select: none;
+  /* Safari */
+  -khtml-user-select: none;
+  /* Konqueror HTML */
+  -moz-user-select: none;
+  /* Old versions of Firefox */
+  -ms-user-select: none;
+  /* Internet Explorer/Edge */
+  user-select: none;
+  /* Non-prefixed version, currently supported by Chrome, Edge, Opera and Firefox */
+  }
 
+  .select{
+     -webkit-touch-callout: text;
+     -webkit-user-select: text;
+     -khtml-user-select: text;
+     -moz-user-select: text;
+     -ms-user-select: text;
+     user-select: text;
+     }
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
@@ -19,6 +42,18 @@ code {
   max-width: 500px;
   margin: 0 auto;
 }
+
+.App{
+  padding: 0;
+  margin: 0;
+  width: 100%;
+  height: 100%;
+}
+.auth-wrapper{
+  padding: 0;
+  margin: 0;
+}
+
 /* Chrome & Safari */
 input[type=number]::-webkit-inner-spin-button, 
 input[type=number]::-webkit-outer-spin-button { 
